--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # Note we depend on NODE_ENV being set to dictate which of the env variables below get loaded at runtime. 
 # See README for more details.
 
-MONGODB_URI=mongodb://localhost:27017/admin
+MONGODB_URI=mongodb://127.0.0.1:27017/admin
 
 # Put lots of randomness in these
 SESSION_SECRET=ashdfjhasdlkjfhalksdjhflak
